[package]
name = "commit-block"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0-alpha.0"
reqwest = { version = "0.12.9", features = [ "blocking", "json" ]}
tokio = { version = "1.41.1", features = ["rt"] }
dotenv = "0.15.0"
serde_json = "1.0.133"
chrono = "0.4.38"
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
