[package]
name = "commit-block"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0-alpha.0"
reqwest = { version = "0.12.11", features = [ "blocking", "json" ]}
tokio = { version = "1.42.0", features = ["rt"] }
dotenv = "0.15.0"
serde_json = "1.0.134"
chrono = "0.4.39"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
