[package]
name = "commit-block"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = [ "blocking", "json" ]}
tokio = { version = "1.43.0", features = ["rt"] }
dotenv = "0.15.0"
serde_json = "1.0.137"
chrono = "0.4.39"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
